tests/build/cases/widget_new/unknown_special_value.stderr
error: unknown value `foo!`
 --> $DIR/unknown_special_value.rs:6:18
  |
6 |         margin = foo!;
  |                  ^^^

warning: unused import: `zero_ui::properties::margin`
 --> $DIR/unknown_special_value.rs:1:5
  |
1 | use zero_ui::properties::margin;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
